@@ -1,50 +1,53 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>Gustini</groupId>
-		<artifactId>gustini.library</artifactId>
-		<version>latest</version>
-	</parent>
-	<artifactId>gustini.library.excelGenerator</artifactId>
-	<version>latest</version>
-	<name>gustini.library.excelGenerator</name>
-	<url>http://maven.apache.org</url>
+	<groupId>rentasad</groupId>
+	<artifactId>rentasad.library.basicTools.excelGenerator</artifactId>
+	<version>1.1.0</version>
+	<name>Rentasad BasicTools Excel-Generator</name>
+	<description>Tool to simplay generate  Excelfiles</description>
 
-
-
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-	<!-- <build> <plugins> <plugin> <artifactId>maven-compiler-plugin</artifactId> 
-		<version>3.1</version> <configuration> <encoding>utf-8</encoding> <source>1.8</source> 
-		<target>1.8</target> </configuration> </plugin> </plugins> </build> <distributionManagement> 
-		<repository> <id>internal</id> <url>http://gstvmarchiva.gustini.local:8080/repository/internal/</url> 
-		</repository> <snapshotRepository> <id>snapshots</id> <url>http://gstvmarchiva.gustini.local:8080/repository/snapshots/</url> 
-		</snapshotRepository> </distributionManagement> <repositories> <repository> 
-		<id>internal</id> <name>Archiva Managed Internal Repository</name> <url>http://gstvmarchiva.gustini.local:8080/repository/internal/</url> 
-		<releases> <enabled>true</enabled> </releases> <snapshots> <enabled>false</enabled> 
-		</snapshots> </repository> <repository> <id>snapshots</id> <name>Archiva 
-		Managed Snapshot Repository</name> <url>http://gstvmarchiva.gustini.local:8080/repository/snapshots/</url> 
-		<releases> <enabled>false</enabled> </releases> <snapshots> <enabled>true</enabled> 
-		</snapshots> </repository> </repositories> <pluginRepositories> <pluginRepository> 
-		<id>internal</id> <name>Archiva Managed Internal Repository</name> <url>http://gstvmarchiva.gustini.local:8080/repository/internal/</url> 
-		<releases> <enabled>true</enabled> </releases> <snapshots> <enabled>false</enabled> 
-		</snapshots> </pluginRepository> <pluginRepository> <id>snapshots</id> <name>Archiva 
-		Managed Snapshot Repository</name> <url>http://gstvmarchiva.gustini.local:8080/repository/snapshots/</url> 
-		<releases> <enabled>false</enabled> </releases> <snapshots> <enabled>true</enabled> 
-		</snapshots> </pluginRepository> </pluginRepositories> -->
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<!-- <source>1.8</source> -->
+					<release>15</release>
+					<compilerArgs>
+						--enable-preview
+					</compilerArgs>
+				</configuration>
+			</plugin>
+			<!-- The Maven-Surefire-Plugin is needed to make Unittests while building -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.14.1</version>
+				<configuration>
+					<argLine>--enable-preview</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<dependencies>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>4.13.1</version>
+		</dependency> -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.7.0</version>
+			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
-	<dependency>
+		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
 			<version>3.17</version>
@@ -61,6 +64,6 @@
 			<artifactId>poi-excelant</artifactId>
 			<version>3.17</version>
 		</dependency>
-
 	</dependencies>
+
 </project>
